fixed rotatating cards not working on Safari by setting -webkit-backface-visibility option.

--- a/css/style.css
+++ b/css/style.css
@@ -224,6 +224,7 @@ body {
 
 .card {
   perspective: 150rem;
+  -webkit-perspective: 150rem;
   -moz-perspective: 150rem;
   position: relative;
   height: 52rem; }
@@ -234,6 +235,7 @@ body {
     top: 0;
     left: 0;
     width: 100%;
+    -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
     border-radius: 3px;
     overflow: hidden;
