--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -1,6 +1,7 @@
 .card {
 
   perspective: 150rem;
+  -webkit-perspective: 150rem;
   -moz-perspective: 150rem;
   position: relative;
   height: 52rem;
@@ -14,6 +15,7 @@
     top: 0;
     left: 0;
     width: 100%;
+    -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
 
     border-radius: 3px;
